--- a/moneymanager.client/package.json
+++ b/moneymanager.client/package.json
@@ -14,10 +14,13 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@mui/x-date-pickers": "^6.19.4",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.10",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-number-format": "^5.3.1",
     "react-router-dom": "^6.21.3",
     "sass": "^1.70.0"
   },
