--- a/MoneyManager.Server/appsettings.json
+++ b/MoneyManager.Server/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "server=.; database=MoneyManger; Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
