--- a/moneymanager.client/package.json
+++ b/moneymanager.client/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.6",
     "@mui/material": "^5.15.6",
+    "@mui/x-charts": "^6.19.5",
     "@mui/x-date-pickers": "^6.19.4",
     "classnames": "^2.5.1",
     "dayjs": "^1.11.10",
