--- a/MoneyManager.Server/Properties/launchSettings.json
+++ b/MoneyManager.Server/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "MoneyManager.Server": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "applicationUrl": "https://localhost:7227;http://localhost:5096",
       "environmentVariables": {
@@ -22,7 +22,7 @@
     },
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development",
